Version 0.3.2Aa4

- Seed node 198.144.190.194 added.
- Update command without parameters.
- NSLMNS call added.

Version 0.3.2Aa3

- Official release

Version 0.3.2Aa2

- Seed nodes adjustments.

Version 0.3.2Aa1

- Official release

Version 0.3.2Aa0

- Auto sync the sumary file.
- Skip rebuild transactions option.
- Not complete blockchain required.
- Manual update.

Version 0.3.1Ba1

- Official release

Version 0.3.1Ae8

- MNs verificaion moved to 3x1
- Implemented BlockUndoneTime.
- New adjustment on GuardarSumario.
- CONST SumMarkInterval added.
- Moved connections info to log instead console.
- Fixed save bots procedure.
- Added trigger to run verificators.

Version 0.3.1Ae7

- Official release

Version 0.3.1Ae6

- Adjustment on GuardarSumario.
- Added port to masternodes.txt report.
- Readclientthreads counter (debug).
- Sumary marks implemented.

Version 0.3.1Ae5

- Fixed bug on GuardarSumario.
- Fixed bug on GuardarWallet.
- Added Clear button on memo log.
- Added Clear button on Exception log.
- Main tab "Monitor" renamed to "Debug".
- "Monitor" tab on debug rename "Processes".
- Added CurrentJob label on Processes tab. (BETA)
- Adjusted size for processes string grid.
- CTOT and RTOT defaults increased to 1000.
- TThreadMNVerificator increased to 5 trys, 3 seconds each.
- Added option to ignore memos output (BETA)
- Extra fee validation.
- Strict orderID required.
- Removed Creation of the pool info file (deprecated)
- Added Reserve and Unreserve slots.
- Tab "Peers" renamed "Stats".
- Added TRY catcher in read client thread.

Version 0.3.1Ae4

- Validatetrfr hash valid verification.
- Implement CS protected incoming strings.
- Stringlist.free moved to on form destroy.
- CS for currentjob added.
- Improved cerrarprograma procedure.
- New seednode 107.175.24.151
- New seednode 107.174.137.27
- Parsed RPCserver execute to catch exceptions.
- Added GetSeedConnections verificator.

Version 0.3.1Ae3

- Forceserver for verificators.